# hagency-kit

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  hagency-config.toml
.agents/skills/hagency-cli/: SKILL.md
agents/: translate.md
dotfiles/: .gitignore
profiles/content/: config.toml
profiles/dev/: config.toml
profiles/dev-plus/: config.toml
scripts/: manange-dotfiles.sh  video-convert.sh
skills/: config.toml
skills/analyze-diff/: SKILL.md
skills/analyze-diff/references/: git-diff-patterns.md  risk-assessment.md  semantic-categorization.md
skills/analyze-diff/scripts/: build_file_change_table.py
skills/diagnose-ai-workflow/: SKILL.md
skills/eval-skill-quality/: SKILL.md
skills/eval-skill-quality/references/: report-template.md  rubric.md  srl-framework.md
skills/eval-skill-quality/scripts/: eval_skill_quality.py
skills/hagency-cli/: SKILL.md
skills/log-analyzer/: SKILL.md
skills/log-analyzer/references/: patterns.md
snippets/agents-md/: dev.md
snippets/skill/: improving.md  language.md
tools/hagency-cli/: pyproject.toml
tools/hagency-cli/src/hagency_cli/: cli.py  common.py  profiles.py  sources.py  workspace.py
tools/hagency-cli/tests/: test_cli.py
